# rust-stm32

docker_test/: Dockerfile
ej_proyecto/: Cargo.toml  memory.x  oldEmbed.toml
ej_proyecto/src/: main.rs
timer_periph/: Cargo.toml  Embed.toml  memory.x
timer_periph/.cargo/: config.toml
timer_periph/src/: main.rs
