[package]
authors = ["BRivsC <bastian.rivas@sansano.usm.cl>"]
edition = "2018"
readme = "README.md"
name = "ej_proyecto"
version = "0.1.0"

[dependencies]
# cortex-m = "0.7"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f411"] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f401"]


# this lets you use `cargo fix`!
[[bin]]
name = "ej_proyecto"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
