[package]
authors = ["BRivsC <bastian.rivas@sansano.usm.cl>"]
edition = "2018"
readme = "README.md"
name = "ej_proyecto"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6"
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f411"] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "ej_proyecto"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
